<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_smoke"
    tools:context=".DrsActivity"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/drs"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        app:titleTextColor="@color/blue"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="131dp"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_date"
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="date" />

        <ImageView
            android:layout_width="42dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_datepicker"
            android:id="@+id/datepicker_drs"
            android:contentDescription="@string/datepicker" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10sp">

        <TextView
            android:layout_width="135dp"
            android:layout_height="63dp"
            android:text="@string/drs_no"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_drsno"
            android:layout_width="139dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_manually"
            android:importantForAutofill="no"
            android:inputType="number" />

        <ImageView
            android:id="@+id/drssearch"
            android:layout_width="42dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_search"
            android:contentDescription="@string/conno_search" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10sp">

        <TextView
            android:layout_width="135dp"
            android:layout_height="63dp"
            android:text="@string/consignment_no"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_conno"
            android:layout_width="139dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_manually"
            android:importantForAutofill="no"
            android:inputType="number" />

        <ImageView
            android:id="@+id/connosearch"
            android:layout_width="42dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_search"
            android:contentDescription="@string/conno_search" />

    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:id="@+id/tv_result"/>
    <Button
        android:id="@+id/save_btn_drs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/save" />
    <Button
        android:id="@+id/close_btn_drs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/close_drs" />


</LinearLayout>