<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PodActivity"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/pod"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        app:titleTextColor="@color/blue"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/delivered_date"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_date_pod"
            android:layout_width="169dp"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="date" />

        <ImageView
            android:layout_width="42dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_datepicker"
            android:id="@+id/datepicker_pod"
            android:contentDescription="@string/datepicker" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="135dp"
            android:layout_height="63dp"
            android:text="@string/consignment_no"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_conno_pod"
            android:layout_width="164dp"
            android:layout_height="match_parent"
            android:hint="@string/enter_manually"
            android:importantForAutofill="no"
            android:inputType="number" />

        <ImageView
            android:id="@+id/connosearch_pod"
            android:layout_width="42dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_search"
            android:contentDescription="@string/conno_search" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="135dp"
            android:layout_height="51dp"
            android:text="@string/reciever_name"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_recievername_pod"
            android:layout_width="237dp"
            android:layout_height="55dp"
            android:hint="@string/enter_manually"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />


    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_result_pod"
        android:textSize="20sp"
        android:textColor="@color/red"/>

    <Button
        android:id="@+id/save_btn_pod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/save" />
</LinearLayout>