<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReturnsActivity"
    android:orientation="vertical"
    android:background="@color/white_smoke">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/returns"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        app:titleTextColor="@color/blue"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:text="@string/return_date"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_date_returns"
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="date" />

        <ImageView
            android:layout_width="42dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_datepicker"
            android:id="@+id/datepicker_returns"
            android:contentDescription="@string/datepicker" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10sp">

        <TextView
            android:layout_width="135dp"
            android:layout_height="63dp"
            android:text="@string/manifest_no"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_msfno_returns"
            android:layout_width="139dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_manually"
            android:importantForAutofill="no"
            android:inputType="number" />

        <ImageView
            android:id="@+id/msfnosearch_returns"
            android:layout_width="42dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_search"
            android:contentDescription="@string/conno_search" />
    </LinearLayout>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/returnreasons"
        android:entries="@array/returnsreason"
        android:layout_marginBottom="10sp" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="135dp"
            android:layout_height="63dp"
            android:text="@string/consignment_no"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_conno_returns"
            android:layout_width="139dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_manually"
            android:importantForAutofill="no"
            android:inputType="number" />

        <ImageView
            android:id="@+id/connosearch_returns"
            android:layout_width="42dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_search"
            android:contentDescription="@string/conno_search" />

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_conno"
        android:textSize="20sp"
        android:textColor="@color/red"/>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="center">
    <Button
        android:id="@+id/save_btn_returns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/save" />

    <Button
        android:id="@+id/close_return"
        android:layout_width="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/close" />
</LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/conno_textview"
        android:textSize="20sp"
        android:textColor="@color/black"/>
</LinearLayout>