<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white_smoke"
    tools:context=".DrsActivity_new">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/drs"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        app:titleTextColor="@color/blue"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UselessParent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/et_new_date"
            android:layout_width="231dp"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="date" />

        <ImageView
            android:layout_width="42dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_datepicker"
            android:id="@+id/datepicker_new"
            android:contentDescription="@string/datepicker" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10sp">

        <TextView
            android:layout_width="135dp"
            android:layout_height="63dp"
            android:text="@string/drs_no"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_drsno_new"
            android:layout_width="139dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_manually"
            android:importantForAutofill="no"
            android:inputType="number" />

        <ImageView
            android:id="@+id/drssearch_new"
            android:layout_width="42dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_search"
            android:contentDescription="@string/conno_search" />

    </LinearLayout>
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/areas"
        android:entries="@array/areas"
        android:outlineSpotShadowColor="@color/blue"
        tools:ignore="UnusedAttribute" />
    <EditText
        android:layout_width="316dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30sp"
        android:layout_marginTop="10sp"
        android:hint="@string/enter_manually"
        android:id="@+id/conno_drs_new"/>
    <com.budiyev.android.codescanner.CodeScannerView
        android:id="@+id/barcodescan_new"
        android:layout_marginTop="10sp"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:frameAspectRatioHeight="1"
        app:frameAspectRatioWidth="2.5"
        app:frameCornersRadius="30dp"
        app:frameCornersSize="30dp"
        app:maskColor="@color/light_slate_gray" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/save_new_drs"
        android:layout_marginStart="130sp"
        android:layout_marginTop="20sp"
        android:background="@color/black"
        android:textColor="@color/white"
        android:textSize="25sp"/>

</LinearLayout>