<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AutoBarcodescanner">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/inscan"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        app:titleTextColor="@color/blue"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UselessParent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/et_new_date"
            android:layout_width="231dp"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="date" />

        <ImageView
            android:layout_width="42dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_datepicker"
            android:id="@+id/datepicker_new"
            android:contentDescription="@string/datepicker" />
    </LinearLayout>
        <Spinner
            android:layout_marginBottom="10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/courier_branch_inscan_new"
            android:entries="@array/courierbranches"
            android:layout_marginTop="10sp"
            android:outlineSpotShadowColor="@color/blue"
            tools:ignore="UnusedAttribute"
            />

    <EditText
        android:layout_width="316dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30sp"
        android:hint="@string/enter_manually"
        android:id="@+id/conno_drs_new"/>
    <com.budiyev.android.codescanner.CodeScannerView
        android:id="@+id/barcodescan"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="3dp"
        app:frameAspectRatioHeight="1"
        app:frameAspectRatioWidth="2.5"
        app:frameCornersRadius="30dp"
        app:frameCornersSize="30dp"
        app:maskColor="@color/light_slate_gray" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/save_new_inscan"
        android:layout_marginStart="130sp"
        android:layout_marginTop="20sp"
        android:background="@color/black"
        android:textColor="@color/white"
        android:textSize="25sp"/>

</LinearLayout>