<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/search"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        app:titleTextColor="@color/blue"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10sp">
    <EditText
        android:id="@+id/conno_et_search"
        android:layout_width="222dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40sp"
        android:hint="@string/consignment_no"
        android:inputType="number" />

        <Button
            android:id="@+id/search_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search" />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/blue"
        android:id="@+id/conno_search"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginBottom="10sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inscan"
        android:textSize="20sp"
        android:textColor="@color/blue"
        android:textAlignment="center"
        android:layout_marginTop="10sp"
        android:gravity="center_horizontal" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:id="@+id/tv_result_details_inscan"
        android:layout_marginTop="10sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/drs"
        android:textSize="20sp"
        android:textColor="@color/blue"
        android:textAlignment="center"
        android:layout_marginTop="10sp"
        android:gravity="center_horizontal" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:id="@+id/tv_result_details_drs"
        android:layout_marginTop="10sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pod"
        android:textSize="20sp"
        android:textColor="@color/blue"
        android:textAlignment="center"
        android:layout_marginTop="10sp"
        android:gravity="center_horizontal" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:id="@+id/tv_result_details_pod"
        android:layout_marginTop="10sp"/>


</LinearLayout>